--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/katex": "^0.16.7",
     "@types/node": "^22.10.2",
     "typescript": "^5.7.2",
     "vite": "^6.0.3"
   },
   "dependencies": {
-    "fraction.js": "^5.2.1"
+    "fraction.js": "^5.2.1",
+    "katex": "^0.16.18"
   }
 }
