--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "jest",
+    "test": "node --no-deprecation ./node_modules/.bin/jest --verbose",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
