--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "node --no-deprecation ./node_modules/.bin/jest --verbose",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@types/jest": "^29.5.14",
     "@types/katex": "^0.16.7",
     "@types/node": "^22.10.2",
+    "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
